update master list vue

--- a/sites/mip.putibaby.com/components/mip-ptg-master-list/example/mip-ptg-master-list.html
+++ b/sites/mip.putibaby.com/components/mip-ptg-master-list/example/mip-ptg-master-list.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div>
-      <mip-ptg-master-list></mip-ptg-master-list>
+      <mip-ptg-master-list
+
+      ></mip-ptg-master-list>
     </div>
     <script src="https://bos.nj.bpc.baidu.com/assets/mip/projects/mip.js"></script>
     <script src="/mip-ptg-master-list/mip-ptg-master-list.js"></script>
