add basic order pay compo

--- a/sites/mip.putibaby.com/components/mip-ptg-order-pay/example/mip-ptg-order-pay.html
+++ b/sites/mip.putibaby.com/components/mip-ptg-order-pay/example/mip-ptg-order-pay.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div>
-      <mip-ptg-order-pay></mip-ptg-order-pay>
+      <mip-ptg-order-pay
+
+      ></mip-ptg-order-pay>
     </div>
     <script src="https://bos.nj.bpc.baidu.com/assets/mip/projects/mip.js"></script>
     <script src="/mip-ptg-order-pay/mip-ptg-order-pay.js"></script>
