add intro detail

--- a/sites/mip.putibaby.com/components/mip-ptg-intro-detail/example/mip-ptg-intro-detail.html
+++ b/sites/mip.putibaby.com/components/mip-ptg-intro-detail/example/mip-ptg-intro-detail.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <div>
-      <mip-ptg-shanghu-detail
+      <mip-ptg-intro-detail
         data-jsonstr="<%= JSON.stringify(data) %>"
-      ></mip-ptg-shanghu-detail>
+      ></mip-ptg-intro-detail>
     </div>
     <script src="https://bos.nj.bpc.baidu.com/assets/mip/projects/mip.js"></script>
-    <script src="/mip-ptg-shanghu-detail/mip-ptg-shanghu-detail.js"></script>
+    <script src="/mip-ptg-intro-detail/mip-ptg-intro-detail.js"></script>
   </body>
 </html>
