--- a/sites/mip.putibaby.com/components/mip-ptg-jinguo-protocol/example/mip-ptg-jinguo-protocol.html
+++ b/sites/mip.putibaby.com/components/mip-ptg-jinguo-protocol/example/mip-ptg-jinguo-protocol.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <div>
-      <mip-ptg-jinguo-event></mip-ptg-jinguo-event>
+      <mip-ptg-jinguo-protocol></mip-ptg-jinguo-protocol>
     </div>
     <script src="https://bos.nj.bpc.baidu.com/assets/mip/projects/mip.js"></script>
-    <script src="/mip-ptg-jinguo-event/mip-ptg-jinguo-event.js"></script>
+    <script src="/mip-ptg-jinguo-protocol/mip-ptg-jinguo-protocol.js"></script>
   </body>
 </html>
