--- a/sites/mip.putibaby.com/components/mip-ptg-jijin-intro/example/mip-ptg-jijin-intro.html
+++ b/sites/mip.putibaby.com/components/mip-ptg-jijin-intro/example/mip-ptg-jijin-intro.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <div>
-      <mip-ptg-jinguo-detail></mip-ptg-jinguo-detail>
+      <mip-ptg-jijin-intro></mip-ptg-jijin-intro>
     </div>
     <script src="https://bos.nj.bpc.baidu.com/assets/mip/projects/mip.js"></script>
-    <script src="/mip-ptg-jinguo-detail/mip-ptg-jinguo-detail.js"></script>
+    <script src="/mip-ptg-jijin-intro/mip-ptg-jijin-intro.js"></script>
   </body>
 </html>
